Implement Day 5 transformations and actions