@@ -12,5 +12,8 @@ libraryDependencies ++= Seq(
 Compile / run / fork := true
 
 Compile / run / javaOptions ++= Seq(
-  "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED"
+  "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
+  "--add-opens=java.base/java.nio=ALL-UNNAMED",
+  "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
+  "--add-opens=java.base/java.util=ALL-UNNAMED"
 )
